# live-translate-realtime-dubbing

./: .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  Procfile  README.md  google-services.json  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
.cursor/plans/: mobile_ui_flutter_testing_69596982.plan.md
.github/workflows/: ci.yml  mlops-ci-cd.yml  release-android-reusable.yml
android/: README.md  build.gradle.kts  gradle.properties  key.properties.template  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/init.d/: disable-dependency-locking.gradle
backend/: .env.example  Dockerfile  WIX_SYNC.md  main.py  nixpacks.toml  package-lock.json  package.json  pyrightconfig.json  requirements-dev.txt  requirements.txt  start_local.bat  supabase_schema.sql
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: requests.py  responses.py
backend/app/routers/: auth.py  auth.py.bak  billing.py  proxy.py  user.py  voice.py
backend/app/services/: supabase_client.py  twilio_media_bridge.py  usage.py
backend/migrations/: 001_wix_api_key.sql  README.md
backend/tests/: conftest.py  test_auth.py  test_health.py
expo/: .env.example
live-dubbing/: .env.example  .flake8  .gitignore  .pylintrc  LICENSE  README.md  build_out.txt  build_stderr.txt  installer.iss  live_translate.spec  pyproject.toml  pyrightconfig.json  requirements.txt  rthook_torch.py  spec.spec
live-dubbing/src/live_dubbing/: __init__.py  __main__.py  app.py
live-dubbing/src/live_dubbing/audio/: __init__.py  capture.py  in_app_capture.py  mic_capture.py  playback.py  process_loopback.py  routing.py  session.py  virtual_cable.py
live-dubbing/src/live_dubbing/config/: __init__.py  settings.py
live-dubbing/src/live_dubbing/core/: __init__.py  events.py  mic_translator.py  orchestrator.py  state.py
live-dubbing/src/live_dubbing/gui/: __init__.py  languages.py  main_window.py
live-dubbing/src/live_dubbing/gui/assets/: __init__.py
live-dubbing/src/live_dubbing/gui/widgets/: __init__.py  app_selector.py  audio_meter.py  debug_window.py  dubbed_window.py  language_panel.py  login_dialog.py  mic_translate_panel.py  settings_dialog.py  status_bar.py  usage_meter.py  vb_cable_wizard.py
live-dubbing/src/live_dubbing/processing/: __init__.py  pipeline.py  speaker_id.py  text_filter.py  vad.py
live-dubbing/src/live_dubbing/services/: __init__.py  backend_service.py  elevenlabs_service.py  oauth_callback_server.py  usage_reporter.py  voice_cloning.py  voice_store.py
live-dubbing/tests/: __init__.py  conftest.py  test_languages.py  test_settings.py  test_vad.py
mlops/: requirements.txt
mobile/: .flutter-plugins-dependencies  .gitignore  .metadata  README.md  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_graph.json
mobile/.dart_tool/extension_discovery/: vs_code.json
mobile/android/: .project  README.md  build.gradle  build.gradle.kts  gradle.properties  key.properties.example  local.properties  settings.gradle
mobile/android/app/: build.gradle  google-services.json
mobile/docs/: GOOGLE_SIGNIN_ANDROID.md
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  firebase_options.dart  main.dart
mobile/lib/config/: api_config.dart
mobile/lib/screens/: home_screen.dart  login_screen.dart  paywall_screen.dart  settings_screen.dart
mobile/lib/services/: api_client.dart  auth_service.dart  qonversion_service.dart  qonversion_service_io.dart  sso_service.dart
mobile/test/: app_test.dart
mobile/windows/: CMakeLists.txt
mobile/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
mobile/windows/runner/: Runner.rc  main.cpp
mobile_new/: .metadata  README.md  pubspec.yaml
mobile_new/android/: README.md  build.gradle.kts  gradle.properties
mobile_new/android/app/: build.gradle  build.gradle.kts
mobile_new/ios/Runner/: Info.plist
mobile_new/ios/Runner.xcodeproj/: project.pbxproj
mobile_new/lib/: app.dart  main.dart
mobile_new/lib/config/: api_config.dart
mobile_new/lib/screens/: home_screen.dart  login_screen.dart  paywall_screen.dart  settings_screen.dart
mobile_new/lib/services/: api_client.dart  (+5 more)
mobile_new/linux/: CMakeLists.txt
mobile_new/test/: widget_test.dart
mobile_new/web/: index.html  manifest.json
website-pages/: account.html  download.html  login.html  upgrade.html
wix-app/: BACKEND_URL.md
wix-app/blank-canvas/: README.md  package-lock.json  package.json  wix.config.json
wix-app/live-translate-jsw/: README.md  package-lock.json  package.json  wix.config.json
wix-app/np/: .gitignore  README.md  package-lock.json  package.json  skills-lock.json  wix.config.json
wix-app/velo-pages/: README.md  WIX_SSO_SETUP.md  api-key-page.js  api-key.web.js  app-auth-page.js  homepage-sso.js  login-page.js
(+33 files in other folders)
